feat(calculator): add basic HTML structure for calculator UI

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic Calculator</title>
     <link rel="stylesheet" href="index.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
-    <script src="script.js"></script>
     <div class="calculator">
       <!-- Display -->
       <div class="calculator-display">0</div>
